--- a/src/app/managerPortal/centre-educators/centre-educators.component.html
+++ b/src/app/managerPortal/centre-educators/centre-educators.component.html
@@ -2,7 +2,7 @@
 <h1>Mountain View Educators</h1>
 <table mat-table [dataSource] = "dataSource">
     <ng-container matColumnDef="teacherId">
-        <th mat-header-cell *matHeaderCellDef> NAME</th>
+        <th mat-header-cell *matHeaderCellDef></th>
         <th mat-cell *matCellDef="let post"> </th>
     </ng-container>
   <ng-container matColumnDef="name">
