--- a/src/app/managerPortal/manager-fee-edit/manager-fee-edit.component.html
+++ b/src/app/managerPortal/manager-fee-edit/manager-fee-edit.component.html
@@ -1,5 +1,5 @@
 <body>
-    <h1>Mountain Fees</h1>
+    <h1>Edit Fees</h1>
     <div class="container">
         <div class="task">
             <mat-card class="example-card">
