--- a/src/app/managerPortal/manager-portal/manager-portal.component.html
+++ b/src/app/managerPortal/manager-portal/manager-portal.component.html
@@ -34,7 +34,7 @@
           <span>Manage Learners</span>
         </button>
         <br>
-        <button [routerLink]="['/Manager-Portal/Fees']" mat-button class="menu-button">
+        <button [routerLink]="['/Manager-Portal/View-Fees']" mat-button class="menu-button">
           <mat-icon>settings</mat-icon>
           <span>Manage Centre Fees</span>
         </button>
