--- a/src/app/managerPortal/teacher-template/teacher-template.component.html
+++ b/src/app/managerPortal/teacher-template/teacher-template.component.html
@@ -1,1 +1,50 @@
-<p>teacher-template works!</p>
+<router-outlet></router-outlet>
+<h1>Teacher Profile</h1>
+<div class="container">
+    <img src= "assets/images/tasha-staff9.png">
+    <mat-card>
+
+    <form [formGroup]="FormGroup" class="example-form" *ngFor = "let item of teacher">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>First Name</mat-label>
+          <input matInput value="{{item.name}}">
+        </mat-form-field> &nbsp;&nbsp;&nbsp;&nbsp;
+        <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>Last Name</mat-label>
+            <input matInput value="{{item.surname}}">
+        </mat-form-field><br>
+    
+        <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>Cell No</mat-label>
+            <input matInput value="{{item.contactNo}}">
+        </mat-form-field>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>Email</mat-label>
+            <input matInput value="{{item.emailAddress}}">
+        </mat-form-field> <br>
+        <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>1<sup>st</sup> Line of Address</mat-label>
+            <input matInput value="{{item.line1Address}}">
+        </mat-form-field>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>2<sup>nd</sup> Line of Address</mat-label>
+            <input matInput value="{{item.line2Address}}">
+        </mat-form-field> <br>
+        <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>3<sup>rd</sup> Line of Address</mat-label>
+            <input matInput value="{{item.city}}">
+        </mat-form-field>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>Postal Code</mat-label>
+            <input matInput value="{{item.zip}}" >
+        </mat-form-field> <br>
+        <button [routerLink]="['/Manager-Portal/Assign-Teacher']" mat-raised-button color="primary">Assign to Class</button>&nbsp;&nbsp;&nbsp;&nbsp;
+        <button  [routerLink]="['/Manager-Portal/Mountain-Teachers']" mat-raised-button color="warn">Back</button>
+      
+      </form>
+      </mat-card>
+      
+    </div>
