--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,4 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: white;
     color: #fff;
 }
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
