--- a/src/app/parentPortal/parent-payment/parent-payment.component.html
+++ b/src/app/parentPortal/parent-payment/parent-payment.component.html
@@ -69,18 +69,15 @@
             
               <h4 class="mb-3">Type of Payment</h4>
               <div class="d-block my-3">
-                <div class="custom-control custom-radio">
-                  <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
-                  <label class="custom-control-label" for="credit">Credit card</label>
-                </div>
-                <div class="custom-control custom-radio">
-                  <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
-                  <label class="custom-control-label" for="debit">Debit card</label>
-                </div>
-                <div class="custom-control custom-radio">
-                  <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
-                  <label class="custom-control-label" for="paypal">Paypal</label>
-                </div>
+                
+                <mat-radio-group
+                  aria-labelledby="example-radio-group-label"
+                  class="example-radio-group"
+                  [(ngModel)]="payment" [ngModelOptions]="{standalone: true}">
+                  <mat-radio-button class="example-radio-button" *ngFor="let item of paymentOptions" [value]="item">
+                    {{item}}
+                  </mat-radio-button> 
+                </mat-radio-group>
               </div>
               <div class="row">
                 <div class="col-md-6 mb-3">
