--- a/src/app/parentPortal/parent-payment/parent-payment.component.css
+++ b/src/app/parentPortal/parent-payment/parent-payment.component.css
@@ -1,3 +1,12 @@
 .d-block{
     line-height: 40px !important;
 }
+.example-radio-group {
+    display: flex;
+    flex-direction: column;
+    margin: 15px 0;
+  }
+  
+  .example-radio-button {
+    margin: 5px;
+  }
