--- a/src/app/parentPortal/parent-payment/parent-payment.component.html
+++ b/src/app/parentPortal/parent-payment/parent-payment.component.html
@@ -33,13 +33,7 @@
                 </div>
                 <span class="text-muted">R5</span>
               </li>
-              <li class="list-group-item d-flex justify-content-between bg-light">
-                <div class="text-success">
-                  <h6 class="my-0">Promo code</h6>
-                  <small>EXAMPLECODE</small>
-                </div>
-                <span class="text-success">-R5</span>
-              </li>
+              
               <li class="list-group-item d-flex justify-content-between">
                 <span>Total (ZAR)</span>
                 <strong>R20</strong>
@@ -66,22 +60,15 @@
                   </div>
                 </div>
               </div>
-            
-              <h4 class="mb-3">Type of Payment</h4>
-              <div class="d-block my-3">
-                <div class="custom-control custom-radio">
-                  <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
-                  <label class="custom-control-label" for="credit">Credit card</label>
-                </div>
-                <div class="custom-control custom-radio">
-                  <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
-                  <label class="custom-control-label" for="debit">Debit card</label>
-                </div>
-                <div class="custom-control custom-radio">
-                  <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
-                  <label class="custom-control-label" for="paypal">Paypal</label>
-                </div>
-              </div>
+              <label id="example-radio-group-label">Payment Method</label>
+              <mat-radio-group
+                aria-labelledby="example-radio-group-label"
+                class="example-radio-group"
+                [(ngModel)]="parentPayment"[ngModelOptions]="{standalone: true}">
+                <mat-radio-button class="example-radio-button" *ngFor="let item of payment" [value]="item">
+                  {{item}}
+                </mat-radio-button>
+              </mat-radio-group>
               <div class="row">
                 <div class="col-md-6 mb-3">
                   <label for="cc-name">Name on card</label>
