--- a/src/app/managerPortal/centre-educators/centre-educators.component.html
+++ b/src/app/managerPortal/centre-educators/centre-educators.component.html
@@ -21,7 +21,7 @@
      
      <td style="float: right;" mat-cell *matCellDef="let post">
          <button [routerLink]="['/Manager-Portal/View-Teacher']" style="margin:15px;" mat-raised-button color="accent" (click)=getRec(post.teacherId)>View Teacher</button>
-         <button [routerLink]="['/Manager-Portal/Edit-Teacher']" style="margin:15px;" mat-raised-button color="warn">Edit Teacher</button>
+         <button [routerLink]="['/Manager-Portal/Edit-Teacher']" style="margin:15px;" mat-raised-button color="warn">Delete Teacher</button>
       </td>
  </ng-container>
  
