--- a/src/app/managerPortal/funding-application/funding-application.component.html
+++ b/src/app/managerPortal/funding-application/funding-application.component.html
@@ -27,7 +27,7 @@
         </mat-form-field>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <br>
-            <button mat-raised-button color="primary">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
+            <button mat-raised-button color="primary" (click)="postdata(FormGroup)">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
             <button [routerLink]="['/Manager-Portal/Manager-Home']" mat-raised-button color="warn">Go Home</button>
           
           </form>
