--- a/src/app/managerPortal/manager-assign/manager-assign.component.html
+++ b/src/app/managerPortal/manager-assign/manager-assign.component.html
@@ -28,7 +28,7 @@
                 </mat-form-field>
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 
-                <button mat-raised-button color="primary" (click)="postdata(FormGroup, selectedClass, selectedVenue)">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button mat-raised-button color="primary" (click)="postdata(selectedClass, FormGroup)">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
                 <button [routerLink]="['/Manager-Portal/Mountain-Teachers']" mat-raised-button color="warn">Go To Teacher List</button>
               
               </form>
