--- a/src/app/managerPortal/manager-fee-edit/manager-fee-edit.component.html
+++ b/src/app/managerPortal/manager-fee-edit/manager-fee-edit.component.html
@@ -18,7 +18,8 @@
                                   </mat-option>
                                 </mat-select>
                               </mat-form-field>
-                              <mat-form-field appearance="fill">
+                              <br>
+                              <mat-form-field class="venue" appearance="fill">
                                 <mat-label>Venue:</mat-label>
                                 <mat-select [(ngModel)]="selectedVenue" name="class" [ngModelOptions]="{standalone: true}">
                                   <mat-option *ngFor="let item of venue" [value]="item.viewValue">
@@ -33,18 +34,14 @@
                             </mat-form-field>
                             <mat-form-field class="example-full-width" appearance="fill">
                                 <mat-label>Class Description</mat-label>
-                                <textarea rows="6" matInput placeholder="learning outcomes are..."></textarea>
+                                <textarea rows="10" matInput placeholder="learning outcomes are..." formControlName="desc"></textarea>
                               </mat-form-field>
                            
                             <br>
-                            <mat-form-field class="example-e" appearance="fill">
-                                <mat-label>Year</mat-label>
-                                <input matInput type="number" min="1900" max="2099" step="1" value="2016" formControlName="year"> 
-                            </mat-form-field>
-                            <br>
+                          
                             &nbsp;&nbsp;&nbsp;&nbsp;
                             <div class="btn">
-                            <button mat-raised-button color="primary">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
+                            <button mat-raised-button color="primary" (click)="postdata(FormGroup, selectedClass,selectedVenue)">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
                             <button [routerLink]="['/Manager-Portal/View-Fees']" mat-raised-button color="warn">Go Back</button> 
                             </div>
                             
