--- a/src/app/managerPortal/manager-profile/manager-profile.component.html
+++ b/src/app/managerPortal/manager-profile/manager-profile.component.html
@@ -7,39 +7,39 @@
     <form [formGroup]="FormGroup" class="example-form" *ngFor = "let item of manager">
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>First Name</mat-label>
-          <input matInput value="{{item.firstName}}" formControlName="firstName">
+          <input matInput value="{{item.firstName}}" formControlName="name">
         </mat-form-field> &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Last Name</mat-label>
-            <input matInput value="{{item.surname}}" formControlName="Surname">
+            <input matInput value="{{item.surname}}" formControlName="surname">
         </mat-form-field><br>
     
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Cell No</mat-label>
-            <input matInput value="{{item.cellNo}}" formControlName="CellNo">
+            <input matInput value="{{item.cellNo}}" formControlName="email">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Email</mat-label>
-            <input matInput value="{{item.emailAddress}}" formControlName="EmailAddress">
+            <input matInput value="{{item.emailAddress}}" formControlName="cellno">
         </mat-form-field> <br>
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>1<sup>st</sup> Line of Address</mat-label>
-            <input matInput value="{{item.line1Address}}" formControlName="Line1">
+            <input matInput value="{{item.line1Address}}" formControlName="city">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>2<sup>nd</sup> Line of Address</mat-label>
-            <input matInput value="{{item.line2Address}}" formControlName="Line2">
+            <input matInput value="{{item.line2Address}}" formControlName="line1">
         </mat-form-field> <br>
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>3<sup>rd</sup> Line of Address</mat-label>
-            <input matInput value="{{item.City}}" formControlName="City">
+            <input matInput value="{{item.City}}" formControlName="line2">
         </mat-form-field>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Postal Code</mat-label>
-            <input matInput value="{{item.zip}}" formControlName="Zip">
+            <input matInput value="{{item.zip}}" formControlName="zip">
         </mat-form-field> <br>
         <button mat-raised-button color="primary" (click)="postdata(FormGroup)">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
         <button mat-raised-button color="warn" (click)="submit()">Reset</button>
