--- a/src/app/managerPortal/manager-view-progress/manager-view-progress.component.html
+++ b/src/app/managerPortal/manager-view-progress/manager-view-progress.component.html
@@ -1,1 +1,9 @@
-<p>manager-view-progress works!</p>
+
+<nav>
+    <button value="{{item['value']}}" *ngFor = "let item of btns" style="margin:15px;" mat-raised-button color="primary" (click)="submit(item['value']) ">{{item['value2']}}</button>
+  
+</nav>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+  
