--- a/src/app/mainSite/login-section/login-section.component.html
+++ b/src/app/mainSite/login-section/login-section.component.html
@@ -77,7 +77,7 @@
                 <div class="overlay-panel overlay-left">
                     <h1>Welcome Back!</h1>
                     <p>To keep connected with us please login with your personal info</p>
-                    <button id="signIn" nclick="test()">Sign In</button>
+                    <button id="signIn" onclick="test()">Sign In</button>
                 </div>
                 <div class="overlay-panel overlay-right">
                     <h1>Hello, Friends!</h1>
