--- a/src/app/managerPortal/manager-portal/manager-portal.component.css
+++ b/src/app/managerPortal/manager-portal/manager-portal.component.css
@@ -62,7 +62,8 @@ mat-icon{
 }
 .avatar{
     border-radius: 50%;
-    width: 11rem;
+    width: 10rem;
+    height: 9rem;
 }
 .name {
     margin: 0;
