--- a/src/app/parentPortal/parent-portal/parent-portal.component.html
+++ b/src/app/parentPortal/parent-portal/parent-portal.component.html
@@ -22,8 +22,8 @@
   <mat-sidenav-container>
     <mat-sidenav #sidenav= "matSidenav">
   
-      <img class="avatar mat-elevation-z8" src="assets/images/elne-staff5.png">
-      <h4 class="name">{{name}}</h4>
+      <img class="avatar mat-elevation-z8" src="assets/images/logoback.PNG">
+      <h4 class="name">{{name}} {{surname}}</h4>
       <p class="designation">{{type}}</p>
   
       <mat-divider></mat-divider>
