--- a/src/app/registration/Parent/parent-register-form/parent-register-form.component.html
+++ b/src/app/registration/Parent/parent-register-form/parent-register-form.component.html
@@ -251,7 +251,7 @@
     <div>
       <button mat-button matStepperPrevious>Back</button>
       <button mat-button (click)="stepper.reset()">Reset</button>
-      <button mat-button (click)="postdata(firstFormGroup, secondFormGroup,thirdFormGroup, forthFormGroup, fifthFormGroup, sixthFormGroup, seventhFormGroup)">Submit</button>
+      <button mat-button (click)="postdata(firstFormGroup, secondFormGroup,thirdFormGroup, forthFormGroup,  sixthFormGroup, seventhFormGroup)">Submit</button>
     </div>
   </mat-step>
   
