--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-radio-outer-circle {
     border-color: black;
 }
+
+li{
+    list-style: none;
+}
